--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 {
 	margin: 0;
 	padding: 0;
+	box-sizing: border-box;
 }
 
 html
@@ -42,18 +43,13 @@ header
 	justify-content: space-between;
 	align-items: center;
 	border-bottom: DarkSlateGray 2px solid;
+	padding: 0 40px;
 }
 
 #links
 {
-	margin-right: 40px;
 	gap: 40px;
 	list-style-type: none;
-}
-
-#header-title
-{
-	margin-left: 40px;
 }
 
 body 
